crates/tui/tests/storybook/snapshots/app_dialog_command__ask_user_question_wrapped_options.narrow.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 32 18
  5   0   2 fg=AnsiValue(208)
  5   2  11 fg=AnsiValue(208) attrs=dim
  5  13  19 fg=AnsiValue(208)
 10   0   1 bg=AnsiValue(237)
 10   1   1 fg=Black bg=White
 10   2   3 bg=AnsiValue(237) attrs=dim
 10   5  18 fg=AnsiValue(208) bg=AnsiValue(237)
 10  23   9 bg=AnsiValue(237)
 11   0   5 bg=AnsiValue(237)
 11   5   8 fg=AnsiValue(208) bg=AnsiValue(237)
 11  13  19 bg=AnsiValue(237)
 12   1  29 attrs=dim
 13   1  23 attrs=dim
 14   1  29 attrs=dim
 15   1  23 attrs=dim
 16   1  30 attrs=dim
 17   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 17  10  15 bg=AnsiValue(233)
 17  25   7 fg=AnsiValue(244) bg=AnsiValue(233)
