crates/tui/tests/storybook/snapshots/app_dialog_command__ask_user_question_wrapped_options.selected.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 46 26
 11   0   2 fg=AnsiValue(208)
 11   2  11 fg=AnsiValue(208) attrs=dim
 11  13  33 fg=AnsiValue(208)
 14   1   4 attrs=dim
 15   1  41 attrs=dim
 16   1  42 attrs=dim
 17   1  31 attrs=dim
 18   0   1 bg=AnsiValue(237)
 18   1   1 fg=Black bg=White
 18   2   3 bg=AnsiValue(237) attrs=dim
 18   5  27 fg=AnsiValue(208) bg=AnsiValue(237)
 18  32  14 bg=AnsiValue(237)
 19   1  41 attrs=dim
 20   1  42 attrs=dim
 21   1  18 attrs=dim
 22   1   4 attrs=dim
 23   1  33 attrs=dim
 24   1  33 attrs=dim
 25   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 25  10  29 bg=AnsiValue(233)
 25  39   7 fg=AnsiValue(244) bg=AnsiValue(233)
