crates/tui/tests/storybook/snapshots/app_dialog_command__btw_dialog_streaming_answer.step-1.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
                                                             14:37:03
 how do I render a buffer?













─ show me a tiny rust example ────────────────────────────────────────
 Here is inline and a block:

 fn main() {


 ○ normal                                                     1:1 100%
